2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `getcwd', `getwd' check to configure.in.

	* configure.in (getcwd, getwd): Add to `AC_CHECK_FUNCS_ONCE'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `readlink' check to configure.in; use _POSIX_SYMLOOP_MAX.

	* configure.in (AC_CHECK_HEADERS_ONCE): Remove sys/param.h.
	(AC_CHECK_FUNCS_ONCE): New, with one item: `readlink'.

2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move checks for missing type definitions to configure.in.

	* configure.in (AC_TYPE_MODE_T, AC_TYPE_OFF_T)
	(AC_TYPE_PID_T, AC_TYPE_SSIZE_T, AC_TYPE_UID_T): New
	(sig_atomic_t): New AC_CHECK_TYPE.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move checks for GCC __attribute__ handling to configure.in

	* configure.in (RCS_CHECK_GCC_ATTRIBUTE): New AC_DEFUN.
	(noreturn, format): New RCS_CHECK_GCC_ATTRIBUTE calls.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Don't bother checking `const', `volatile' handling.

	* conf.sh: Remove checks for `const', `volatile' handling.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move check for system headers into configure.in.

	* configure.in (AC_CHECK_HEADERS_ONCE): New.

2010-02-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Require a C99-capable compiler.

	* configure.in (AC_PROG_CC): Delete.
	(AC_PROG_CC_C99): New.
	If no C99-capable compiler is found, error out.

2010-02-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use zero-arg form of AC_OUTPUT.

	* configure.in (AC_CONFIG_FILES): New.
	(AC_OUTPUT): Move args to `AC_CONFIG_FILES'.

2010-02-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move authoritative version number into configure.in.

	* autogen.sh: New file.
	* configure.in (AC_INIT): Use three-arg form.
	(AC_CONFIG_HEADERS): New.
	* Makefile.in (PACKAGE_VERSION, PACKAGE_TARNAME): New vars.
	(dist): Use them.

2010-02-24  Thien-Thi Nguyen  <ttn@gnuvola.org>
