@@ -1,5 +1,13 @@
 2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[build] Move `fchmod' check to configure.in.
+
+	* ci.c: Do s/if has_fchmod/ifdef HAVE_FCHMOD/g.
+	* rcsedit.c: Likewise.
+	* conf.sh: Remove check for `fchmod'.
+
+2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[build] Move `getcwd', `getwd' check to configure.in.
 
 	* rcsfnms.c: Do s/has_getcwd/defined HAVE_GETCWD/g;
